# fusang

./: Cargo.toml  README.md
editor-ai/: Cargo.toml
editor-ai/src/: ai_actions.rs  ai_engine.rs  lib.rs  models.rs
editor-core-project/: Cargo.toml
editor-core-project/src/: buffer_manager.rs  file_tree.rs  lib.rs  workspace.rs
editor-core-text/: Cargo.toml
editor-core-text/src/: buffer.rs  cursor.rs  edit.rs  lib.rs  rope_ext.rs  selection.rs  text_model.rs
editor-infra/: Cargo.toml
editor-infra/src/: config.rs  lib.rs  logging.rs  task_executor.rs  telemetry.rs
editor-lsp/: Cargo.toml
editor-lsp/src/: client.rs  lib.rs  protocol.rs  server_manager.rs
editor-ui-gpui/: Cargo.toml
editor-ui-gpui/src/: ai_panel.rs  editor_view.rs  lib.rs
fusang-app/: Cargo.toml
fusang-app/src/: main.rs
