[package]
name = "editor-infra"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1.34", features = ["rt-multi-thread", "sync", "macros"] }
uuid = { version = "1.7", features = ["v4"] }
