[package]
name = "editor-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
editor-infra = { path = "../editor-infra" }
editor-core-text = { path = "../editor-core-text" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"