[package]
name = "editor-ui-gpui"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { version = "0.2.2" }
#gpui = { git = "https://github.com/zed-industries/zed", package = "gpui", branch = "main" }
#gpui = { git = "https://github.com/zed-industries/gpui", branch = "main" }
editor-infra = { path = "../editor-infra" }
editor-core-text = { path = "../editor-core-text" }
editor-core-project = { path = "../editor-core-project" }
editor-lsp = { path = "../editor-lsp" }
editor-ai = { path = "../editor-ai" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
futures = "0.3"
